[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Menus/Main/Menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Menus/Main/new_game_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Menus/Main/psycomachia_menu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menus/Main/FadeIn.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/Main/Menu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.498039, 0.0666667, 0.0666667, 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends Button

export(String) var scene_to_load
"

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.498039, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.498039, 0.0666667, 0.0666667, 1 )

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 784.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Psychomachia"
align = 1

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
margin_top = 87.0
margin_right = 784.0
margin_bottom = 405.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="NewGame" type="Button" parent="MainMenu/Buttons"]
margin_top = 64.0
margin_right = 784.0
margin_bottom = 124.0
rect_min_size = Vector2( 360, 60 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 1 )
flat = true
script = SubResource( 2 )
scene_to_load = "res://Scenes/Levels/Limbo.tscn"

[node name="NewGameLabel" type="Label" parent="MainMenu/Buttons/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.498039, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Novo Jogo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="MainMenu/Buttons"]
margin_top = 129.0
margin_right = 784.0
margin_bottom = 189.0
rect_min_size = Vector2( 360, 60 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 3 )
flat = true
script = SubResource( 2 )
scene_to_load = "res://Scenes/Menus/Load/Load.tscn"

[node name="LoadGameLabel" type="Label" parent="MainMenu/Buttons/LoadGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.498039, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Carregar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="MainMenu/Buttons"]
margin_top = 194.0
margin_right = 784.0
margin_bottom = 254.0
rect_min_size = Vector2( 360, 60 )
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 4 )
flat = true
script = SubResource( 2 )
scene_to_load = "exit_game"

[node name="ExitGameLabel" type="Label" parent="MainMenu/Buttons/ExitGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.498039, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Sair"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="MainMenu"]
margin_top = 409.0
margin_right = 784.0
margin_bottom = 440.0
size_flags_vertical = 1
text = "Version 0.0.1
Nameless Studio"

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fade_in = SubResource( 5 )

[connection signal="pressed" from="MainMenu/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/ExitGame" to="." method="_on_ExitGame_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]
